hphp/test/zend/good/ext/standard/tests/file/readlink_variation1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no links on Windows');
}
}
