hphp/test/zend/bad/ext/standard/tests/file/copy_variation12-win32.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != "WIN")
  die("skip Run only on Windows");
?>